syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/config/v1beta1";

package config.v1beta1;

message RulesSpec {
  DiscoverySpec discovery = 1;
}

message DiscoverySpec {
  PrometheusRulesSpec prometheusRules = 1;
  FilesystemRulesSpec filesystem = 2;

  string interval = 3;
}

message PrometheusRulesSpec {
  // Namespaces to search for rules in. If empty, will search all accessible
	// namespaces.
  repeated string searchNamespaces = 1;

	// Kubeconfig to use for rule discovery. If nil, will use the in-cluster
	// kubeconfig.
  optional string kubeconfig = 2;
}

message FilesystemRulesSpec {
  repeated string pathExpressions = 1;
}